--- a/custom.css
+++ b/custom.css
@@ -3,6 +3,7 @@
 }
 .modal-body{
     margin-top: 30px;
+    height: 370px;
 }
 .close{
 	opacity: 1;
@@ -14,7 +15,6 @@
 	position: relative;
 }
 .carousel-inner {
-	padding: 30px;
 	display: block;
 	content: "";
 }
